# inrust

./: .gitignore  Cargo.toml  Makefile.toml  README-DSP.md  README.md  build.rs  rustfmt.toml
.github/workflows/: deploy.yml  rust-ci.yml  rust.yml
assets/: rename-clean.sh
benches/: calc24_bench.rs  comp24_bench.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: comp24.rs
fuzz/src/: calc24_fuzz.rs  comp24_fuzz.rs
indiox/: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  index.html  input.css  package.json  tailwind.config.js  tailwind_base.css
indiox/.github/workflows/: deploy.yml
indiox/assets/: gh-corner.html
indiox/src/: main.rs
inegui/: Cargo.toml
inegui/src/: app.rs  backend_panel.rs  lib.rs  main.rs
inperse/: .gitignore  Cargo.toml  build.rs  input.css  package.json  tailwind.config.js  tailwind_base.css
inperse/.cargo/: config.toml
inperse/src/: lib.rs  main.rs
inperse/src/tmpl/: index.rs
inperse/static/: gh-corner.html
inperse/translations/: en-US.ftl  zh-CN.ftl
inslint/: .gitignore  Cargo.toml  build.rs  index.html
inslint/assets/icons/: README.md
inslint/src/: main.rs
inslint/ui/: game24-app.slint
src/: arith_expr.pest  calc24.cpp  calc24.h  calc24.rs  comp24.cpp  comp24.h  comp24.rs  lib.rs  list.rs  main.rs  prime.rs  smart_ptr.h
tests/: game24_all.fmh  game24_all.rs  game24_sols.fmh  game24_sols.txt  game24_test.rs  test.rs
