
# https://doc.rust-lang.org/cargo/reference/manifest.html
# rustup override set nightly

[package]
name = "inrust"

edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
   homepage.workspace = true
 repository.workspace = true
description = "Accumulate knowledge of my study on Rust language"

#build = "build.rs"     # default, build = false

[workspace.package]
edition = "2021"    # use 'cargo fix' to fix for compatibility with different Rust edition.
version = "0.3.5"
#readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [ "MeiHui FAN <mhfan@ustc.edu>" ]
   homepage = "https://mhfan.github.io/inrust"
 repository = "https://github.com/mhfan/inrust"
description = "Algorithms and WebUI for 24-Game/Puzzle/Challenge"

#exclude = ["tests", "benches"]

[dependencies]  # 'cargo tree', to visualize the dependency graph
rand = "0.8"
#num  = "0.4"    # rational/complex/bigint/integer etc.
num-integer = "0.1"
#itertools = "0.10"
yansi = "0.5"
atty  = "0.2"

pest  = "2.5"
pest_derive = "2.5"
#mexe  = "0.2"   # XXX: make it support rational number?
#float_eq  = "1"
#float-cmp = "0.9"

#async-std = "1.12"
#async-recursion = "1.0"
#futures = "0.3"

#syn = "1.0"
#quote  = "1.0"
#chrono = "0.4"
#proc_macro2 = "1.0"

ahash = { version = "0.8", optional = true }    # https://github.com/tkaitchuck/aHash
num-bigint   = { version = "0.4", optional = true }
num-rational = { version = "0.4", optional = true }
serde = { version = "1", features = [ "derive" ], optional = true }
arbitrary = { version = "1.1", optional = true, features = ["derive"] }
build-time = { git = "https://github.com/AlephAlpha/build-time" }

#cxx  = { version = "1.0", optional = true }
#dhat = { version = "0.3", optional = true }

[dev-dependencies]
#pprof = { version = "0.10", optional = true, features = ["flamegraph", "criterion"] }
criterion = "0.5"
#bencher = "0.1"
#csv = "1.1"

[build-dependencies]
cc = { version = "1.0", optional = true }
#cxx-build = { version = "1.0", optional = true }
#pkg-config = "0.3"
#chrono = "0.4"

[features]
debug = []
default = ["cc", "ahash"] #, "serde", "num-rational", "num-bigint"
#cxx = ["dep:cxx", "dep:cxx-build"]
#dhat-heap = ["dep:dhat"]   # not needed, implied by optional dependency

[[bench]]
name = "calc24_bench"
#path = "benches/calc24_bench.rs"
#cargo_bench_support = true
#html_reports = false
harness = false

[lib]
#crate-type = ["cdylib", "lib"]
#proc-macro = true

[profile.dev]
incremental = true
opt-level = 1   # Enable a small amount of optimization in debug mode

[profile.dev.package."*"]
opt-level = 3   # Enable high optimizations for dependencies, but not for own code.

[profile.release]
codegen-units = 1   # Perform optimizations on all codegen units.
panic = 'abort' # Do not perform backtrace for panic on release builds.
#opt-level = 3   # default level
#debug = true    # for flamegraph
#strip = true	# Automatically strip symbols from the binary.
lto = true

#cargo build -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort

#[profile.release-lto]  # customized profile
#inherits = "release"

[workspace]
members = [ "inperse", "indiox" ] #"inyew", "inyew/src-tauri", #"inslint", "inegui",
#exclude = [ "inwasm", "cortex-m" ]
#resolver = "2"  # default for 2021 edition?

