
### https://doc.rust-lang.org/cargo/reference/manifest.html
# rustup override set nightly

[package]
name = "inrust"

edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
   homepage.workspace = true
 repository.workspace = true
description = "Accumulate knowledge of my study on Rust language"
categories  = [ "command-line-utilities", "games", "mathematics" ]
keywords = [ "24-game", "24-solver", "24-puzzle", "24-challenge" ]
exclude  = [ "README-DSP.md", "tmp" ]   # "tests", "benches", "fuzz"
#publish  = [ "crates-io" ]  # cargo publish --registry crates-io

#build = "build.rs"     # default, build = false

[workspace.package]
edition = "2021"    # use 'cargo fix' to fix for compatibility with different Rust edition.
version = "0.3.8"
#readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [ "MeiHui FAN <mhfan@ustc.edu>" ]
   homepage = "https://mhfan.github.io/inrust"
 repository = "https://github.com/mhfan/inrust"
description = "Algorithms and WebUI for 24-Game/Puzzle/Challenge"

[dependencies]  # 'cargo tree', to visualize the dependency graph
rand = "0.8"
#num  = "0.4"    # rational/complex/bigint/integer/traits etc.
num-traits = "0.2"
#itertools = "0.10"
yansi = "0.5"
atty  = "0.2"

pest  = "2.7"
pest_derive = "2.7"
#mexe  = "0.2"   # XXX: make it support rational number?
#float_eq  = "1"
#float-cmp = "0.9"

#async-std = "1.12"
#async-recursion = "1.0"
#futures = "0.3"

#syn = "1.0"
#quote  = "1.0"
#chrono = "0.4"
#proc_macro2 = "1.0"

cxx   = { version = "1.0", optional = true }
dhat  = { version = "0.3", optional = true }
pprof = { version = "0.12", features = [ "flamegraph", "criterion" ], optional = true }

ahash = { version = "0.8", optional = true }    # https://github.com/tkaitchuck/aHash
num-bigint   = { version = "0.4", optional = true }
num-rational = { version = "0.4", optional = true }
serde = { version = "1", features = [ "derive" ], optional = true }
#arbitrary  = { version = "1", features = ["derive"], optional = true }
#build-time = { version = "0.1", git = "https://github.com/AlephAlpha/build-time" }

[dev-dependencies]  # used for compiling tests, examples, and benchmarks
criterion = "0.5"   # not allowed to be optional
#bencher = "0.1"
rexpect = "0.5"
regex = "1.9"
#csv = "1.1"

[build-dependencies]  # used for compiling build script
cxx-build = { version = "1.0", optional = true }
cc = { version = "1.0", optional = true }
#pkg-config = "0.3"
chrono = "0.4"

[features]
debug = []
cxx = [ "dep:cxx", "cxx-build" ]   # implied by optional dependency
default = [ "cc", "ahash", #"cxx", #"serde", #"num-rational", #"num-bigint",
]
dhat-heap = [ "dhat" ]

[[bench]]
name = "calc24_bench"
#path = "benches/calc24_bench.rs"
#cargo_bench_support = true
#html_reports = false
harness = false

#[lib]
#crate-type = [ "dylib", "lib" ]  # "cdylib", "lib", "dylib", "rlib"
#proc-macro = true

[profile.dev]
incremental = true
opt-level = 1   # Enable a small amount of optimization in debug mode

[profile.dev.package."*"]
opt-level = 3   # Enable high optimizations for dependencies, but not for own code.

[profile.release]
codegen-units = 1   # Perform optimizations on all codegen units.
strip = 'debuginfo' # keep 'symbols'
panic = 'abort' # Do not perform backtrace for panic on release builds.
#debug = 'full'  # for flamegraph
#opt-level = 3   # default level
lto = 'fat' # true

#cargo build -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort

#[profile.release-lto]  # customized profile
#inherits = "release"

[workspace]
members = [ #"inperse", "indiox", #"fuzz",
    #"inyew", "inyew/src-tauri",  #"inslint", "inegui",
]
#exclude = [ "indsp", "inbevy", "inwasm", "cortex-m" ]
#resolver = "2"  # default for 2021 edition?

