
### https://doc.rust-lang.org/cargo/reference/manifest.html
# Optional for nightly-only experiments: rustup override set nightly

[package]
name = "inrust"

edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
  homepage.workspace = true

description = "Accumulate knowledge of my study on Rust language"
categories  = [ "command-line-utilities", "games", "mathematics" ]
keywords = [ "24-game", "24-solver", "24-puzzle", "24-challenge" ]
exclude  = [ "README-DSP.md", "tmp" ]   # "tests", "benches", "fuzz"
#publish  = [ "crates-io" ]  # cargo publish --registry crates-io

#build = "build.rs"     # auto-discovered by default; use `build = false` to disable it

[workspace.package]
edition = "2021"    # use `cargo fix --edition` before migrating to a newer edition
version = "0.3.9"
#readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [ "MeiHui FAN <mhfan@ustc.edu>" ]
   homepage = "https://mhfan.github.io/inrust"
 repository = "https://github.com/mhfan/inrust"
description = "Algorithms and WebUI for 24-Game/Puzzle/Challenge"

[dependencies]  # 'cargo tree', to visualize the dependency graph
#num  = "0.4"    # rational/complex/bigint/integer/traits etc.
num-traits = "0.2"
#itertools = "0.10"
yansi = { version = "1.0", features = [ "detect-tty", "detect-env" ], optional = true }
rand  = { version = "0.10", optional = true }
#atty  = "0.2"

pest  = "2.8"
pest_derive = "2.8"

#async-recursion = "1.0"
#async-std = "1.12"
#futures = "0.3"
#rayon = "1.8"  # data parallelism library, https://github.com/rayon-rs/rayon

#syn = "1.0"
#quote  = "1.0"
#chrono = "0.4"
#proc_macro2 = "1.0"

cxx   = { version = "1.0", optional = true }
dhat  = { version = "0.3", optional = true }
pprof = { version = "0.15", features = [ "flamegraph", "criterion" ], optional = true }

 ahash = { version = "0.8", optional = true }    # https://github.com/tkaitchuck/aHash
gxhash = { version = "3.4", optional = true }
num-bigint   = { version = "0.5", optional = true }
num-rational = { version = "0.4", optional = true }
serde = { version = "1", features = [ "derive" ], optional = true }
#arbitrary  = { version = "1", features = ["derive"], optional = true }
#build-time = { version = "0.1", git = "https://github.com/AlephAlpha/build-time" }

[dev-dependencies]  # used for compiling tests, examples, and benchmarks
criterion = "0.8"   # not allowed to be optional
#bencher = "0.1"
rexpect = "0.7"
regex = "1.12"
rand = "0.10"
#csv = "1.1"

[build-dependencies]  # used for compiling build script
cc = { version = "1.2", features = [ "parallel" ], optional = true }
cxx-build = { version = "1.0", optional = true }
#pkg-config = "0.3"
chrono = "0.4"

[features]
debug = []
cli = [ "dep:yansi", "dep:rand" ]
cxx = [ "dep:cxx", "dep:cxx-build" ]   # `dep:` avoids implicit dependency features
default = [ "cc", "cli", "ahash" ]     # opt-in alternatives: "gxhash", "cxx", "serde", etc.
dhat-heap = [ "dep:dhat" ]

[[bin]]
name = "inrust"
required-features = [ "cli" ]

[[bench]]
name = "calc24_bench"
#path = "benches/calc24_bench.rs"
# Criterion HTML reports are configured by Criterion, not as `[[bench]]` keys.
harness = false

#[lib]
#crate-type = [ "dylib", "lib" ]  # "cdylib", "lib", "dylib", "rlib"
#proc-macro = true

[profile.dev]
#incremental = false
opt-level = 1   # Enable a small amount of optimization in debug mode

[profile.dev.package."*"]
opt-level = 3   # Enable high optimizations for dependencies, but not for own code.

[profile.release]
codegen-units = 1   # Optimize the crate as one codegen unit; slower build, potentially faster code.
strip = 'debuginfo' # Remove debug information while retaining symbols where the platform supports it.
panic = 'abort' # Abort instead of unwinding; panic hooks may still print a message/backtrace.
#debug = 'full'  # for flamegraph
#opt-level = 3   # default level
lto = 'fat' # `true` also selects fat LTO.

#cargo build -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort

#[profile.release-lto]  # customized profile
#inherits = "release"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[workspace]
members = [] #"inperse", "indiox", #"fuzz",
    #"inyew", "inyew/src-tauri",  #"inslint", "inegui",
#exclude = [ "indsp", "inbevy", "inwasm", "cortex-m" ]
#resolver = "2"  # Match edition 2021 dependency-feature resolution explicitly.
