
# https://rust-fuzz.github.io/book/
# cargo fuzz init

[package]
publish = false
name = "calc24-fuzz"
version.workspace = true
edition.workspace = true
authors.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }

#inrust = { path = "..", features = ["arbitrary"] }
[dependencies.inrust]
features = ["arbitrary"]
path = ".."

[workspace]
members = ["."] # Prevent this from interfering with workspaces

[[bin]]
name = "calc24" # because of no main.rs
path = "src/calc24_fuzz.rs"
test = false
doc  = false

