
# https://rust-fuzz.github.io/book/
# cargo fuzz init

[package]
publish = false
edition = "2021"
version = "0.1.0"
name = "calc24-fuzz"
#version.workspace = true
#edition.workspace = true
#authors.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", features = [ "arbitrary-derive" ] }
inrust = { path = ".." }    # features = [ "arbitrary" ],

[workspace]
#members = [ "." ]   # Prevent this from interfering with workspaces

[[bin]]
name = "calc24"     # because of no main.rs
path = "src/calc24_fuzz.rs"
test = false
doc  = false

