
[package]
name = "indiox"
edition = "2021"
version = "0.1.5"
#edition.workspace = true
#version.workspace = true
#license.workspace = true
#authors.workspace = true
#   homepage.workspace = true
# repository.workspace = true
#description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = [ "js" ] }
#wasm-logger = "0.2"     # WebAssembly Debug

[dependencies]
dioxus = { version = "0.5", features = [ "web" ] } # "router", "desktop", "web"

#console_error_panic_hook = "0.1"
dioxus-logger = "0.5"
tracing = "0.1"
#log = "0.4"

wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [ #'Window', 'Document',
    'HtmlInputElement', #'HtmlCanvasElement', 'CanvasRenderingContext2d'
] }

rand = "0.8"    # git = "https://github.com/mhfan/inrust",
inrust  = { path = "..", default-features = false, features = [ "ahash" ] }  # "cc", "serde",
instant = { version = "0.1", features = [ "wasm-bindgen" ] }

[profile.dev]
opt-level = 1

[profile.release]
strip = "debuginfo"
codegen-units = 1
#opt-level = "s"
panic = 'abort'
lto = true

[workspace]

