
[package]
name = "indiox"
edition = "2021"
version = "0.1.5"
#edition.workspace = true
#version.workspace = true
#license.workspace = true
#authors.workspace = true
#   homepage.workspace = true
# repository.workspace = true
#description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = [ "js" ] }
#wasm-logger = "0.2"     # WebAssembly Debug

[dependencies]
dioxus = { version = "0.6" } #, features = [ "fullstack", "router" ]
#tracing = "0.1"

wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [ #'Window', 'Document',
    'HtmlInputElement', 'HtmlCollection', #'HtmlCanvasElement', 'CanvasRenderingContext2d'
] }

rand = "0.8"    # XXX: path = "..", why not work with 'dx serve'?
inrust  = { git = "https://github.com/mhfan/inrust", default-features = false, features = [ "ahash" ] }  # "cc", "serde",
instant = { version = "0.1", features = [ "wasm-bindgen" ] }

[features]
default = ["web"]
desktop = ["dioxus/desktop"]
mobile  = ["dioxus/mobile"]
web     = ["dioxus/web"]

[profile.release]
codegen-units = 1
strip = true # "debuginfo"
opt-level = "z" # "s"
panic = 'abort'
lto = true
#debug = false
#incremental = false

[profile.dev]
opt-level = 1

[profile.wasm-dev]
inherits = "dev"

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[workspace]

