
[package]
name = "indiox"
edition = "2021"
version = "0.1.6"
#edition.workspace = true
#version.workspace = true
#license.workspace = true
#authors.workspace = true
#   homepage.workspace = true
# repository.workspace = true
#description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7" } #, features = [ "fullstack", "router" ]

web-sys = { version = "=0.3.78", features = [ 'Window', 'Document',
    'HtmlInputElement', 'HtmlCollection', #'HtmlCanvasElement', 'CanvasRenderingContext2d'
] } # XXX: failed to build on macOS for web-sys v0.3.79~82 and wasm-bindgen v0.2.102~105

rand = "0.9"    # git = "https://github.com/mhfan/inrust",
inrust  = { path = "..", default-features = false, features = [ "ahash" ] }  # "cc", "serde",
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
#gloo-timers = { version = "0.3", features = [ "futures" ] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = [ "wasm_js" ] }
#wasm-logger = "0.2"     # WebAssembly Debug

[features]
default = ["web"]
desktop = ["dioxus/desktop"]
mobile  = ["dioxus/mobile"]
web     = ["dioxus/web"]    # XXX: capable only since 'as_web_event' use

[profile.release]
codegen-units = 1
strip = true # "debuginfo"
opt-level = "z" # "s"
panic = 'abort'
lto = true
#debug = false
#incremental = false

[profile.dev]
opt-level = 1

[profile.wasm-dev]
inherits = "dev"

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[workspace]

