
[package]
name = "inperse"

edition = "2021"
version = "0.1.0"
#edition.workspace = true
#version.workspace = true
#license.workspace = true
#authors.workspace = true
#   homepage.workspace = true
# repository.workspace = true
#description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]  # Dependencies for the engine and the browser go here
sycamore = "0.8"    # { git = "https://github.com/sycamore-rs/sycamore" }
perseus  = { version = "=0.4.0-beta.11", features = [ "hydrate", "translator-fluent" ] }  # fluent/lightweight
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

rand = "0.8"    # git = "https://github.com/mhfan/inrust",
inrust = { path = "..", default-features = false, features = [ "ahash", "serde" ] }  # "cc"
instant = { version = "0.1", features = [ "wasm-bindgen" ] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]    # Engine-only dependencies go here
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread" ] }
perseus-warp = { version = "=0.4.0-beta.11", features = [ "dflt-server" ] }
# This is an internal convenience crate that exposes all integrations through features for testing
# perseus-(integration, warp, axum, actix-web)

[target.'cfg(target_arch = "wasm32")'.dependencies]     # Browser-only dependencies go here
getrandom = { version = "0.2", features = [ "js" ] }
#wee_alloc = "0.4"

[dependencies.perseus-macro]
version  = "=0.4.0-beta.11"

[dependencies.web-sys]
features = [ "HtmlInputElement", "HtmlSelectElement", ]
version  = "0.3"

