
[package]
name = "inperse"
edition = "2021"
version = "0.1.4"
#edition.workspace = true
#version.workspace = true
#license.workspace = true
#authors.workspace = true
#   homepage.workspace = true
# repository.workspace = true
#description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]  # Dependencies for the engine and the browser go here
sycamore = "0.8"    # { git = "https://github.com/sycamore-rs/sycamore" }
perseus  = { version = "0.4", features = [ "hydrate", "translator-fluent" ] }  # fluent/lightweight
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

#perseus-macro = { version  = "0.4" }
web-sys = { version  = "0.3", features = [ "HtmlInputElement", "HtmlSelectElement", ] }

rand = "0.9"    # git = "https://github.com/mhfan/inrust",
inrust = { path = "..", default-features = false, features = [ "ahash", "serde" ] }  # "cc"
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
gloo-timers = { version = "0.3", features = [ "futures" ] }

#[target.'cfg(engine)'.dev-dependencies]
#fantoccini = "0.17"

[target.'cfg(engine)'.dependencies]     # not(target_arch = "wasm32"
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread" ] }
perseus-warp = { version = "0.4", features = [ "dflt-server" ] }
# This is an internal convenience crate that exposes all integrations through features for testing
# perseus-(integration, warp, axum, actix-web)

[target.'cfg(client)'.dependencies]     #     target_arch = "wasm32"
getrandom = { version = "0.3", features = [ "wasm_js" ] }
#wee_alloc = "0.4"

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
strip = true # "debuginfo"
opt-level = "z" # "s"
panic = 'abort'
lto = true
#debug = false
#incremental = false

[workspace]

